<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="-59dp"
        tools:layout_editor_absoluteY="-39dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/triangleUp_m"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="minUp"
                    android:text="@string/triangleUp_s"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/triangleUp_s"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="secUp"
                    android:text="@string/triangleUp_m"
                    android:textSize="50sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.4">

                <TextView
                    android:id="@+id/minute"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="minute"
                    android:text="00"
                    android:textSize="60sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/second_colon"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/second"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="second"
                    android:text="00"
                    android:textSize="60sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.2">

                <TextView
                    android:id="@+id/triangleDown_m"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="minDown"
                    android:text="@string/triangleDown_s"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/triangleDown_s"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="secDown"
                    android:text="@string/triangleDown_m"
                    android:textSize="50sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.1">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2">

                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="reset_button"
                    android:text="@string/reset" />

                <Button
                    android:id="@+id/timer_button"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="timer_button"
                    android:text="@string/timer" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.2">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>